Add favicon, styling stuff

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -5,14 +5,14 @@
 
 
 @primary:#17436A;
-@secondary:#A5BAC8;
+@secondary:#316891;
 @thirdColor: #BF9D4E;
 @fourthColor: #A77E1A;
 @fifthColor:#F6E795;
 
 body {
-	color:@secondary;
-	background: @primary;
+	color:#DEDEDE;
+	background: @secondary;
 	font-size: 18px;
 	line-height: 1.6em;
 	font-weight: 400;
@@ -315,7 +315,7 @@ section.featured.inner {
  ================= */
 
 section#footer {
-	background: darken(@primary, 10%);
+	background: @primary;
 	margin: 0;
 	font-size:95%;
 }
@@ -483,7 +483,7 @@ div.code {
 	width:20em;
 	margin: 2em auto 2em auto;
 	padding: 1em;
-	background:darken(@primary, 10%);
+	background:darken(@primary, 5%);
 	font-weight:500;
 	li {
 		margin:.5em !important;
